--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -99,6 +99,13 @@
 				.span-#{$i}-75 {
 					width: 100%;
 				}
+				.span-#{$i}-5 {
+					width: ($x * $i) + ($x * 0.5);
+				}
+
+				.span-#{$i}-75 {
+					width: ($x * $i) + ($x * 0.75);
+				}
 			}
 		}
 	}
