--- a/Css.css
+++ b/Css.css
@@ -54,7 +54,7 @@ div{
     box-decoration-break: clone;
     padding:50px;
     margin: 5px ;
-    border-end-end-radius: 8px blue;
+    border-end-end-radius: 8px red;
     
 }
 {
