--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,6 +243,14 @@ input, select, textarea {
 			transition-delay: 0.75s;
 			opacity: 0.25;
 		}
+	html {
+		width: 100%;
+		height: 100%;
+	}
+
+	html {
+		box-sizing: border-box;
+	}
 
 	@media screen and (max-width: 736px) {
 
