[fix]: add text margin for text
add this left, right and center code in your area for text and make text responsive as per the devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -715,6 +715,17 @@ input, select, textarea {
 	textarea {
 		padding: 0.75rem 1rem;
 	}
+	.align-left {
+		text-align: left;
+	}
+
+	.align-center {
+		text-align: center;
+	}
+
+	.align-right {
+		text-align: right;
+	}
 
 	input[type="checkbox"],
 	input[type="radio"] {
