--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,6 +203,18 @@ input, select, textarea {
 			background-size: 4rem;
 			opacity: 0;
 		}
+button,
+	input,
+	select,
+	textarea {
+		font-size: 100%;
+		margin: 0;
+		max-width: 100%;
+		vertical-align: baseline;
+		-webkit-box-sizing: border-box;
+		  -moz-box-sizing: border-box;
+		       box-sizing: border-box;
+	}
 
 		body:after {
 			pointer-events: none;
