--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,18 @@ input, select, textarea {
 	-ms-appearance: none;
 	appearance: none;
 }
+button,
+	input,
+	select,
+	textarea {
+		font-size: 100%;
+		margin: 0;
+		max-width: 100%;
+		vertical-align: baseline;
+		-webkit-box-sizing: border-box;
+		  -moz-box-sizing: border-box;
+		       box-sizing: border-box;
+	}
 
 /* Page */
 
